engine-net-2/examples/Errors/IndexTwoDifferentIndexNamesCompiled.grg
#include "Rules.grg"

sequence s1
{
	for{v:N in {ascending(idx>7,idx2<42)}; true}
}
